syntax = "proto3";
package types;

option go_package = "github.com/sisu-network/sisu/x/sisu/types";

message GasPriceMsg {
  string signer = 1;
  string chain = 2;
  int64 blockHeight = 3;
  int64 gasPrice = 4;
}

message GasPriceRecord {
  repeated GasPriceMsg messages = 3;
}
