syntax = "proto3";
package types;

option go_package = "github.com/sisu-network/sisu/x/sisu/types";

message TransferOutParams {
  // Id of the chain
  string chain = 1;
  // The number of maximum transfer in a single transaction.
  int32 maxBatching = 2;
}

message Params {
  int32 majority_threshold = 1;
  repeated TransferOutParams transfer_out_params = 2;
  repeated string supported_chains = 3;

  // Transfer commission rate with 1 unit = 0.01%
  int32 transfer_commission_rate = 4;

  // Remote call commission in gwei
  int64 remote_call_commission = 5;

  // Expiration Ablock
  int32 expiration_block = 6;

  // Maximum number of retry when a txout fails to sign.
  int32 max_keysign_retry = 7;

  // Maxinum number of retry when a transfer is rejected.
  int32 max_rejected_transfer_retry = 8;

  // Transfer timeout block
  int32 transfer_timeout_block = 9;
}
