syntax = "proto3";
package types;

option go_package = "github.com/sisu-network/sisu/x/sisu/types";

message Utxo {
  string chain = 1;
  string tx_hash = 2;
  int32 index = 3;
}
